--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -5,5 +5,8 @@
   }
   
   .footer {
-    background-color: #f5f5f5;
+    /* background-color: #f5f5f5; */
+    /* position: fixed; */
+    bottom: 0;
+    width: 100%;
   }
