--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -5,8 +5,12 @@
   }
   
   .footer {
-    /* background-color: #f5f5f5; */
-    /* position: fixed; */
+    background-color: #11001c;
     bottom: 0;
     width: 100%;
+    color: #fff!important;
+  }
+
+  footer p {
+    color: #fff!important;
   }
