updated general styles for container class

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@ body {
   background-color: #F7F6F9;
 }
 
+.container {
+  width: auto;
+  max-width: 960px;
+}
+
 p a {
   color: purple!important;
   
