changed to sticky footer

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -5,10 +5,16 @@
   }
   
   .footer {
+    position: fixed;
     background-color: #11001c;
     bottom: 0;
     width: 100%;
     color: #fff!important;
+    margin-top: auto;
+  
+
+  
+
   }
 
   footer p {
