--- a/src/components/Hero/style.css
+++ b/src/components/Hero/style.css
@@ -1,35 +1,20 @@
-.hero {
-    height: 650px;
-    background-size: cover;
+.cover {
+    position: fixed;
+  }
+
+  .bg-img {
+    width:100%;
+    height: 100vh;
+    background: url("../../abstract.jpg");
+    background-color: #ccc;
+    background-repeat: no-repeat;
     background-position: center;
-    position: relative;
+    background-size: cover;
+    background-attachment: fixed;
+    /* position: relative; */
     object-fit: fill;
+
+
   }
-  
-  .hero::after {
-    content: "";
-    display: block;
-    opacity: .4;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: black;
-  }
-  
-  .hero * {
-    position: relative;
-    z-index: 2;
-  }
-  
-  .hero h1, .hero h2 {
-    color: white;
-  }
-  
-  .hero h1 {
-    font-size: 60px;
-    padding-top: 140px;
-    margin-top: 0;
-  }
+
   
