added dynamic scroll and updated hover style properties

--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -1,11 +1,9 @@
-.navbar {
-    background-color: #11001c;
-}
+.navbar-nav, .navbar-brand {
+   font-weight: bolder;
 
-li .fa-lg {
-    color: #fff!important;
 }
 
 .nav-item a:hover {
     text-decoration: none;
-}
+    opacity: 0.5;
+} 
